--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,39 @@
-absl-py==1.2.0
-aiofiles==22.1.0
-aiosqlite==0.18.0
-ansi2html==1.8.0
-appdirs==1.4.4
-arrow==1.2.3
-asciitree==0.3.3
+absl-py==1.4.0
 astunparse==1.6.3
-bioframe==0.4.1
-Brotli==1.0.9
-brotlipy==0.7.0
-cachetools==5.2.0
-click==8.1.3
-colorcet==3.0.1
-contourpy==1.0.5
-cooler==0.9.2
-cytoolz==0.11.0
-czifile==2019.7.2
-dash==2.6.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dill==0.3.6
-dm-tree==0.1.7
-et-xmlfile==1.1.0
-etils==0.8.0
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+dm-tree==0.1.8
 fbm==0.3.0
-fbm-sim==1.0
-Flask==2.2.2
-Flask-Compress==1.13
-flatbuffers==22.9.24
+flatbuffers==23.5.26
 fonttools==4.25.0
-fqdn==1.5.1
 gast==0.4.0
-google-auth==2.12.0
-google-auth-oauthlib==0.4.6
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-googleapis-common-protos==1.56.4
-importlib-resources==5.9.0
-ipydatawidgets==4.3.2
-ipympl==0.9.2
-isoduration==20.11.0
-itk==5.3.0
-itk-core==5.3.0
-itk-elastix==0.16.0
-itk-filtering==5.3.0
-itk-io==5.3.0
-itk-meshtopolydata==0.10.0
-itk-numerics==5.3.0
-itk-registration==5.3.0
-itk-segmentation==5.3.0
-itkwidgets==0.14.0
-itsdangerous==2.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-dash==0.4.2
-jupyter-events==0.5.0
-jupyter-server==1.23.5
-jupyter-ydoc==0.2.2
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server_fileid==0.6.0
-jupyter_server_ydoc==0.6.1
-jupyterlab==3.6.1
-jupyterlab_server==2.19.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-libclang==14.0.6
-llvmlite==0.40.1rc1
-Markdown==3.4.1
-matplotlib==3.6.0
-matplotlib-scalebar==0.8.1
-multiprocess==0.70.14
+idna==3.4
+keras==2.13.1
+libclang==16.0.6
+Markdown==3.4.4
+MarkupSafe==2.1.3
 munkres==1.1.4
-numba==0.57.0
-numpy==1.23.3
-oauthlib==3.2.1
-opencv-python==4.8.0.74
-openpyxl==3.0.10
+oauthlib==3.2.2
 opt-einsum==3.3.0
-pandas==1.5.0
-param==1.13.0
-Pillow==9.2.0
-platformdirs==3.0.0
-plotly==5.10.0
-ply==3.11
-pooch==1.6.0
-promise==2.3
-protobuf==3.19.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyct==0.5.0
-pyfaidx==0.7.2.1
-PyQt5-sip==12.11.0
-PyQt6==6.5.1
-PyQt6-Qt6==6.5.1
-PyQt6-sip==13.5.1
-python-json-logger==2.0.4
-PyYAML==6.0
-pyzmq==25.0.0
+Pillow==9.4.0
+protobuf==4.24.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+requests==2.31.0
 requests-oauthlib==1.3.1
-retrying==1.3.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
 rsa==4.9
-scikit-learn==1.1.2
-scipy==1.9.1
-Shapely==1.8.4
-simplejson==3.19.1
-style==1.1.0
-tenacity==8.1.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-datasets==4.6.0
-tensorflow-estimator==2.10.0
-tensorflow-macos==2.10.0
-tensorflow-metadata==1.10.0
-tensorflow-metal==0.6.0
-tensorflow-probability==0.18.0
-termcolor==2.0.1
-threadpoolctl==3.1.0
-tqdm==4.64.1
-traitlets==5.6.0
-traittypes==0.2.1
-update==0.0.1
-uri-template==1.2.0
-webcolors==1.12
-webencodings==0.5.1
-Werkzeug==2.2.2
-wrapt==1.14.1
-y-py==0.5.5
-ypy-websocket==0.8.2
-zipp==3.8.1
-zstandard==0.21.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+tensorflow-probability==0.21.0
+termcolor==2.3.0
+typing_extensions==4.5.0
+urllib3==1.26.16
+Werkzeug==2.3.7
+wrapt==1.15.0
