--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Markdown==3.4.4
 MarkupSafe==2.1.3
 munkres==1.1.4
 oauthlib==3.2.2
+opencv-python==4.8.0.74
 opt-einsum==3.3.0
 Pillow==9.4.0
 protobuf==4.24.2
@@ -29,6 +30,7 @@ rsa==4.9
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 termcolor==2.3.0
+torch==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.16
 Werkzeug==2.3.7
