--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 #template from https://github.com/pypa/sampleproject/blob/main/pyproject.toml
-name = "SMT_Analysis"  # Required
+name = "SMT"  # Required
 
 version = "0.0.1"  # Required
 
@@ -31,6 +31,8 @@ dependencies = [
   "scikit-image>=0.18.3",
   "lmfit>=1.0.2",
 ]
+[tool.setuptools.packages.find]
+include = ["SMT*"]
 
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
