--- a/SMT_env_BP.yml
+++ b/SMT_env_BP.yml
@@ -3,14 +3,191 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.10
-  - scipy
-  - matplotlib
-  - pandas
-  - scikit-learn
-  - ipykernel
-  - shapely
-  - scikit-image
-  - gast
-  - lmfit
-prefix: /Users/baljyot/opt/anaconda3/envs/SMT_env_BP
+  - aom=3.6.0
+  - asteval=1.0.6
+  - blas=1.0
+  - blosc=1.21.3
+  - bottleneck=1.4.2
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - brunsli=0.1
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2025.2.25
+  - cairo=1.16.0
+  - cellpose=3.1.0
+  - cfitsio=3.470
+  - charls=2.2.0
+  - click=8.1.7
+  - cloudpickle=3.0.0
+  - contourpy=1.3.1
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.28
+  - dask-core=2025.2.0
+  - dask-image=2024.5.3
+  - dav1d=1.2.1
+  - deprecated=1.2.13
+  - dill=0.3.8
+  - eigen=3.4.0
+  - expat=2.6.4
+  - fastremap=1.13.4
+  - ffmpeg=6.1.1
+  - filelock=3.13.1
+  - fontconfig=2.14.1
+  - fonttools=4.55.3
+  - freetype=2.12.1
+  - fribidi=1.0.10
+  - fsspec=2024.12.0
+  - future=1.0.0
+  - gdk-pixbuf=2.42.10
+  - geos=3.10.6
+  - gettext=0.21.0
+  - giflib=5.2.2
+  - glib=2.78.4
+  - glib-tools=2.78.4
+  - gmp=6.3.0
+  - gmpy2=2.2.1
+  - graphite2=1.3.14
+  - gst-plugins-base=1.14.1
+  - gstreamer=1.14.1
+  - harfbuzz=10.2.0
+  - hdf5=1.14.5
+  - icu=73.1
+  - imagecodecs=2024.9.22
+  - imageio=2.37.0
+  - importlib-metadata=8.5.0
+  - jinja2=3.1.6
+  - joblib=1.4.2
+  - jpeg=9e
+  - jxrlib=1.1
+  - kiwisolver=1.4.8
+  - krb5=1.20.1
+  - lame=3.100
+  - lazy_loader=0.4
+  - lcms2=2.16
+  - leptonica=1.82.0
+  - lerc=4.0.0
+  - libabseil=20240116.2
+  - libaec=1.1.3
+  - libarchive=3.7.7
+  - libavif=1.1.1
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=14.0.6
+  - libclang13=14.0.6
+  - libcurl=8.12.1
+  - libcxx=14.0.6
+  - libdeflate=1.22
+  - libedit=3.1.20230828
+  - libev=4.33
+  - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libglib=2.78.4
+  - libiconv=1.16
+  - libllvm14=14.0.6
+  - libnghttp2=1.57.0
+  - libogg=1.3.5
+  - libopenblas=0.3.21
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=17.4
+  - libprotobuf=4.25.3
+  - librsvg=2.56.3
+  - libsqlite=3.46.0
+  - libssh2=1.11.1
+  - libtheora=1.1.1
+  - libtiff=4.5.1
+  - libtorch=2.5.1
+  - libuv=1.48.0
+  - libvorbis=1.3.7
+  - libvpx=1.13.1
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
+  - libxml2=2.13.5
+  - libzlib=1.2.13
+  - libzopfli=1.0.3
+  - llvm-openmp=14.0.6
+  - llvmlite=0.44.0
+  - lmfit=1.3.3
+  - locket=1.0.0
+  - lz4-c=1.9.4
+  - markupsafe=3.0.2
+  - matplotlib-base=3.10.0
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - mpmath=1.3.0
+  - mysql=8.4.0
+  - natsort=7.1.1
+  - ncurses=6.4
+  - networkx=3.4.2
+  - nomkl=3.0
+  - numba=0.61.0
+  - numexpr=2.10.1
+  - numpy=1.26.4
+  - numpy-base=1.26.4
+  - opencv=4.10.0
+  - openh264=2.1.1
+  - openjpeg=2.5.2
+  - openldap=2.6.4
+  - openssl=3.0.16
+  - opentelemetry-api=1.31.1
+  - packaging=24.2
+  - pandas=2.2.3
+  - pango=1.50.7
+  - partd=1.4.2
+  - pcre2=10.42
+  - pillow=11.1.0
+  - pims=0.7
+  - pip=25.0
+  - pixman=0.40.0
+  - pygments=2.15.1
+  - pyparsing=3.2.0
+  - pyqtgraph=0.13.1
+  - python=3.10.9
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2023.3
+  - python_abi=3.10
+  - pytorch=2.5.1
+  - pytz=2024.1
+  - pyyaml=6.0.2
+  - qt-main=5.15.2
+  - qtpy=2.4.1
+  - readline=8.2
+  - roifile=2024.5.24
+  - scikit-image=0.25.0
+  - scikit-learn=1.6.1
+  - scipy=1.15.1
+  - setuptools=75.8.0
+  - setuptools-scm=8.1.0
+  - shapely=2.0.6
+  - six=1.16.0
+  - sleef=3.5.1
+  - slicerator=1.1.0
+  - snappy=1.2.1
+  - sqlite=3.45.3
+  - superqt=0.6.7
+  - sympy=1.13.3
+  - tbb=2021.8.0
+  - tesseract=5.2.0
+  - threadpoolctl=3.5.0
+  - tifffile=2024.12.12
+  - tk=8.6.14
+  - tomli=2.0.1
+  - toolz=1.0.0
+  - tqdm=4.67.1
+  - typing_extensions=4.12.2
+  - tzdata=2025a
+  - uncertainties=3.2.2
+  - unicodedata2=15.1.0
+  - wheel=0.45.1
+  - wrapt=1.17.0
+  - xz=5.6.4
+  - yaml=0.2.5
+  - zfp=1.0.0
+  - zipp=3.21.0
+  - zlib=1.2.13
+  - zlib-ng=2.0.7
+  - zstd=1.5.6
